# VOID-Exr-plugin

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  OpenEXRReader.cpp  OpenEXRReader.h  init.cpp
